--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ spacy==2.0.8
 numpy==1.14.0
 scikit-learn==0.19.1
 scipy==1.0.0
+pymorphy2==0.8
+https://files.pythonhosted.org/packages/7c/9b/358faaff410f65a4ad159275e897b5956dcb20576c5b8e764b971c1634d7/pymorphy2_dicts_ru-2.4.404381.4453942-py2.py3-none-any.whl
